--- a/Nuevo/nbproject/project.properties
+++ b/Nuevo/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Help4Traveling_PromoV2_.jar
+dist.jar=${dist.dir}/Help4Traveling.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
