--- a/Nuevo/nbproject/project.properties
+++ b/Nuevo/nbproject/project.properties
@@ -32,7 +32,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${libs.Apache_Common_Base_64.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
