Casos de uso de tarea 3 (sin web service)

--- a/Nuevo/nbproject/project.properties
+++ b/Nuevo/nbproject/project.properties
@@ -29,13 +29,17 @@ dist.jar=${dist.dir}/Help4Traveling__Master_.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcommon-1.0.17.jar=jcommon-1.0.17.jar
+file.reference.jfreechart-1.0.14.jar=jfreechart-1.0.14.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${libs.junit_4.classpath}:\
-    ${libs.Apache_Common_Base_64.classpath}
+    ${libs.Apache_Common_Base_64.classpath}:\
+    ${file.reference.jfreechart-1.0.14.jar}:\
+    ${file.reference.jcommon-1.0.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
